--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Style -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./scss/styles.css">
     <link rel="icon" href="img/Component 1.svg">
 </head>
 <body onload="checkLanguage()">
